--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <form id="rankingForm">
         <label for="comercialRanking">Comercial:</label>
         <input type="text" id="comercialRanking" required><br>
-        <label for="fechaRanking">Fecha:</label>
-        <input type="date" id="fechaRanking" required><br>
+        <label for="fechaRanking">Fecha (texto):</label>
+        <input type="text" id="fechaRanking" placeholder="Por ejemplo: 4/1/2020" required><br>
         <label for="ventasTotalRanking">Ventas Total:</label>
         <input type="number" step="0.01" id="ventasTotalRanking" required><br><br>
         <button type="button" onclick="guardarRanking()">Guardar</button>
